--- a/src/main/resources/static/css/notification.css
+++ b/src/main/resources/static/css/notification.css
@@ -107,6 +107,7 @@
 		border-top: none !important;
 		border-left: none !important;
 		border-right: none !important;
+		border-bottom: none !important;
 		height: 72px;
 	}
 	.message-preview {
