--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -177,6 +177,7 @@
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/check-password.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register.js"></script>
 
