--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -107,6 +107,7 @@
 	<script src="/js/lib/bulma-collapsible.min.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/login.js"></script>
 </body>
