--- a/src/main/resources/templates/tos.html
+++ b/src/main/resources/templates/tos.html
@@ -30,6 +30,7 @@
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/tools/get-text.js"></script>
+	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 </body>
 </html>
