--- a/src/main/resources/templates/faq.html
+++ b/src/main/resources/templates/faq.html
@@ -52,6 +52,7 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
+	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 </body>
