--- a/src/main/resources/templates/password-reset.html
+++ b/src/main/resources/templates/password-reset.html
@@ -43,6 +43,7 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
+	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/tools/refresh-captcha.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/modal.js"></script>
