--- a/src/main/resources/templates/register-oauth.html
+++ b/src/main/resources/templates/register-oauth.html
@@ -111,6 +111,7 @@
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
 	<script src="/js/register-oauth.js"></script>
