--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -13,7 +13,9 @@
 	<th:block th:replace="fragments.html::bulma"></th:block>
 	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
+	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/user-profile.css" />
 	<link rel="stylesheet" href="/css/search.css" />
 	<link rel="stylesheet" href="/css/donate.css" />
 	<title th:text="#{donate.title}"></title>
@@ -43,15 +45,21 @@
 	<div class="loader-parent">
 		<div class="loader"></div>
 	</div>
+	
+	<div id="user-profile-container"></div>
+	
 	<footer th:replace="fragments.html::navigation"></footer>
 
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
+	<script src="/js/user-profile.js"></script>
 	<script src="/js/donate.js"></script>
 </body>
 
