--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -18,6 +18,7 @@
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
 	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/user-profile.css" />
 	<link rel="stylesheet" href="/css/search.css" />
 	<title th:text="#{search.title}"></title>
 </head>
@@ -113,6 +114,8 @@
 			<div id="map"></div>
 		</div>
 	</div>
+	
+	<div id="user-profile-container"></div>
 		
 	<div class="loader-parent">
 		<div class="loader"></div>
@@ -132,6 +135,8 @@
 	<script src="/js/tools/loader.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
+	<script src="/js/user-profile.js"></script>
+	<script src="/js/user-profile-modal.js"></script>
 	<script src="/js/search.js"></script>
 </body>
 
