--- a/src/main/resources/templates/liked-users.html
+++ b/src/main/resources/templates/liked-users.html
@@ -14,7 +14,10 @@
 	<th:block th:replace="fragments.html::ui-design"></th:block>
 	<link rel="stylesheet" href="/css/lib/bulma-slider.min.css" />
 	<link rel="stylesheet" href="/css/lib/css-loaders.css" />
+	<link rel="stylesheet" href="/css/lib/modal-fx.min.css" />
 	<link rel="stylesheet" href="/css/alovoa.css" />
+	<link rel="stylesheet" href="/css/user-profile.css" />
+	<link rel="stylesheet" href="/css/user-profile.css" />
 	<link rel="stylesheet" href="/css/notification.css" />
 	<title th:text="#{liked-users.title}"></title>
 </head>
@@ -50,23 +53,21 @@
 	<div class="loader-parent">
 		<div class="loader"></div>
 	</div>
-
-	<script>
-		function viewProfile(idEnc) {
-			let url = '/profile/view/' + idEnc;
-			window.open(url, '_blank').focus();
-		}
-	</script>
+	
+	<div id="user-profile-container"></div>
 
 	<footer th:replace="fragments.html::navigation"></footer>
 
 	<script src="/sw.js"></script>
 	<script src="/js/lib/fontawesome.all.js"></script>
 	<script src="/js/lib/jquery.min.js"></script>
+	<script src="/js/lib/modal-fx.min.js"></script>
 	<script src="/js/tools/get-notification.js"></script>
 	<script src="/js/tools/get-text.js"></script>
 	<script src="/js/tools/loader.js"></script>
+	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
+	<script src="/js/user-profile-modal.js"></script>
 </body>
 
 </html>
