--- a/src/main/resources/templates/donate.html
+++ b/src/main/resources/templates/donate.html
@@ -59,7 +59,7 @@
 	<script src="/js/tools/loader.js"></script>
 	<script src="/js/tools/modal.js"></script>
 	<script src="/js/alovoa.js"></script>
-	<script src="/js/user-profile.js"></script>
+	<script src="/js/user-profile-modal.js"></script>
 	<script src="/js/donate.js"></script>
 </body>
 
