Better search layout

--- a/src/main/resources/static/css/alovoa.css
+++ b/src/main/resources/static/css/alovoa.css
@@ -549,7 +549,7 @@ input[type=range].slider {
 	.navigation-item span {
 		display: none;
 	}
-	.search-audio {
+	.search-audio, .search-visibility {
 		display: none;
 	}
 }
