Fix padding issues in user-profile

--- a/src/main/resources/static/css/user-profile.css
+++ b/src/main/resources/static/css/user-profile.css
@@ -19,7 +19,7 @@
   	z-index: 1;
 }
 @media screen and (max-width: 768px) {
-	#main-logged-in .box, #main-logged-in .section {
+	#user-profile-content .box, #user-profile-content .section {
 		padding: 0px;
 	}
 	.container .content {
