--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -622,7 +622,7 @@
 							</div>
 						</div>
 						<div id="report-user-div" class="display-none">
-							<div class="box">
+							<div class="box" style="padding: 1.25rem">
 								<div style="margin-bottom: 24px"
 									th:utext="#{userprofile.report.confirm}"></div>
 				
